wow. --add-exports allows us to override the Truffle module settings in our tests.