@@ -56,7 +56,10 @@ tasks.compileTestKotlin {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("-Dtruffle.class.path.append=${sourceSets.main.get().runtimeClasspath.asPath}")
+    jvmArgs(
+        "-Dtruffle.class.path.append=${sourceSets.main.get().runtimeClasspath.asPath}",
+        "--add-exports=org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED",
+        "--add-exports=org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED")
 }
 
 tasks.jar {
